added task status tracking api
